--- a/session 9/formlogin.css
+++ b/session 9/formlogin.css
@@ -102,6 +102,7 @@ button {
 .bottom {
 	color: white;
 	float: left;
-	margin-left: 500px;
+	text-align: center;
+	margin-left: 650px;
 	margin-top: 50px;
 }
