--- a/session 9/formlogin.css
+++ b/session 9/formlogin.css
@@ -99,7 +99,7 @@ button {
 	float: left;
 	margin: 10px 10px 10px 40px;
 }
-.bottom {
+.footer {
 	color: white;
 	float: left;
 	text-align: center;
